Bilder wurden eingefuegt und Verbesserungen im theoretischen Rahmen vorgenommen.

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 
 %Für Abbildungen
 \usepackage{graphicx}
+%Um mehrere Bilder einzufügen
+\usepackage{subcaption}
 
 \usepackage{ragged2e}
 \usepackage[format=plain,
