--- a/sections/Anhang.tex
+++ b/sections/Anhang.tex
@@ -1,7 +1,7 @@
-\section{Interviewtranskripte}
+\section{Transkripte der Interviews}
 
 \input{sections/Anhang/rahles}
 
-\input{sections/Anhang/troppman}
+\input{sections/Anhang/troppmann}
 
 \input{sections/Anhang/schlaak}
