--- a/sections/Anhang/rahles.tex
+++ b/sections/Anhang/rahles.tex
@@ -14,7 +14,7 @@ R: Darfst du.
 
 E: Dann würde ich gerne das Interview mit der ersten Frage starten.
 
-E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluralPolit erfüllen sollte, bevor es Ihre Softwarearchitektur zu einer Microservicearchitektur umstellt?
+E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluralPolit erfüllen sollte, bevor es Ihre Softwarearchitektur zu einer Microservice-Architektur umstellt?
 
 R: Ja.
 
@@ -24,7 +24,7 @@ E: Welche Bedingungen empfindest du als wichtig?
 R: Zwei Dimensionen. Die eine Dimension ist ganz klar das Alter der Firma bzw. damit einher gehen der Reifegrad des Geschäftsmodells. Wie grundlegend sind Iteration zu erwarten, in Form von Softwarearchitektonischen Änderungen, was das Geschäftsmodell angeht oder wie man sie abbildet.
 
 \label{appendix:r-2}
-R: Das ist der eine Punkt und auf der anderen Seite immer auch die Frage: Microservicearchitektur eröffnet ein Flexibilität, aber eben auch im gleichen Maß Komplexität.
+R: Das ist der eine Punkt und auf der anderen Seite immer auch die Frage: Microservice-Architektur eröffnet ein Flexibilität, aber eben auch im gleichen Maß Komplexität.
 
 \label{appendix:r-3}
 R: Das heißt es muss  jemanden geben, der die Verbindungen zwischen den Anwendungen beherrscht, monitort, administriert und aufsetzt und sich die Frage stellt: Ist es wirtschaftlich, Ja oder Nein?
@@ -123,7 +123,7 @@ R: Also man kann das genauso gut in den Sand setzen, wenn ein Team mit einem Mon
 
 E: Du hattest einmal eine technische Anforderung mit angerissen. Da würde ich jetzt in Frage Drei gerne detaillierter eingehen wollen. 
 
-E: Gibt es in deinen Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte, bevor es die Softwarearchitektur von einer monolithen Architektur zu einer Microservicearchitektur umstellt? 
+E: Gibt es in deinen Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte, bevor es die Softwarearchitektur von einer monolithischen Architektur zu einer Microservice-Architektur umstellt? 
 
 \label{appendix:r-26} \label{appendix:r-27}
 R: Auf der rein technischen Ebene würde ich die heutzutage geltende Best Practices als Anforderung sehen. Es sollten immer automatische Tests, sowie ein automatischer Integration- und Deployment-Prozess vorhanden sein und funktionieren.
@@ -143,7 +143,7 @@ Weil sonst verliert man eben wieder diese ganze Zeit beim Ausetzten des Systems,
 \label{appendix:r-31}
 R: Monitoring ist das A und O. Das heißt mit Anstieg der Komplexität, muss ich sicher sein, dass ich auch diese Komplexität hinreichend überblicken kann.
 
-E: Ja, okay. Sind deiner Meinung nach innerhalb einer Microservicearchitektur Sicherheit und Datengeschwindigkeit besonders wichtig?
+E: Ja, okay. Sind deiner Meinung nach innerhalb einer Microservice-Architektur Sicherheit und Datengeschwindigkeit besonders wichtig?
 
 \label{appendix:r-32}
 R: Sicherheit gehört für mich zu den Grundvoraussetzungen. Egal über welche Architektur wir reden. Das ist auch wieder eine Sache, die hat für mich nichts mit Architektur zu tun. Ich möchte  die Infrastruktur eines Monolithen genauso sicher haben wie bei meinem Microservices. 
