--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -12,7 +12,7 @@ Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraP
 
 \subsection{Problemstellung}
 
-Umgesetzt wurde die Plattform in Ruby on Rails im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle genötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
+Umgesetzt wurde die Plattform in Ruby on Rails\footnote{Weitere Informationen zu Ruby on Rails ist im \cref{sec:einordnung} beschrieben.} im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle genötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
 
 \footnotetext{
 React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. Diese verwaltet die Darstellung im HTML-DOM und ermöglicht dem Entwickler, Informationen zwischen Funktionen zu administrieren \parencite{react_webpage}.
@@ -21,25 +21,25 @@ React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. 
 Gehostet werden die Applikationen über den Cloud-Computing-Anbieter Amazon Web Services\footnotemark (AWS).
 \footnotetext{AWS ist ein Tochterunternehmen des Online-Versandhändlers Amazon mit einer Vielzahl an Diensten im Bereich Cloud-Computing \parencite{amazon_homepage}.}
 
-	Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z. B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in das Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z. B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
-	Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z. B. MySQL, MariaDB und PostgreSQL \parencite[vlg.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
-	Bilder und Tonaufnahmen werden in einem Simple Storage Service-Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vlg.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
-	Um automatisch zu jedem Beitrag Intros zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vlg.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
+Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z. B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in den Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z. B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
+Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z. B. MySQL, MariaDB und PostgreSQL \parencite[vgl.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
+Bilder und Tonaufnahmen werden in einem Simple Storage Service Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vgl.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
+Um automatisch zu jedem Statement ein Intro zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vgl.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
 
-Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden ergeben haben. Hierdurch steigt der Aufwand, der nötig ist, um sich in den Quellcode einzuarbeiten. Verursacht wird diese Korrespektivität, indem im Frontend die Funktionen und Klassen in logisch getrennte Bausteine geteilt und an mehreren Stellen verwendet werden. Dies ermöglicht zwar eine schnelle Entwicklung, führt jedoch dazu, dass die Veränderung einer Komponente Änderungen an mehreren Stellen auslöst. Diese Abhängigkeiten machen es mit steigender Menge an Sourcecode immer komplexer, weitere Funktionen umzusetzen ohne die bestehende Logik zu verändern. Hinzukommt, dass neben dem eigenen Quellcode auch externe Funktionalitäten genutzt werden, welche durch den Paketverwaltungsdienst von Node.js \parencite{nodejs} npm installiert werden.
+Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden ergeben haben. Hierdurch steigt der Aufwand, der nötig ist, um sich in den Quellcode einzuarbeiten. Verursacht wird diese Abhängigkeit, indem im Frontend die Funktionen und Klassen in logisch getrennte Bausteine geteilt und an mehreren Stellen verwendet werden. Dies ermöglicht zwar eine schnelle Entwicklung, führt jedoch dazu, dass die Veränderung einer Komponente Änderungen an mehreren Stellen auslöst. Diese Relativitäten machen es mit steigender Menge an Sourcecode immer komplexer, weitere Funktionen umzusetzen ohne die bestehende Logik zu verändern. Hinzukommt, dass neben dem eigenen Quellcode auch externe Funktionalitäten genutzt werden, welche durch den Paketverwaltungsdienst von Node.js \parencite{nodejs} npm installiert werden.
 
-Diese werden jedoch nur in Teilen der Anwendung verwendet, werden allerdings zum gesamten Frontend hinzugefügt. Insgesamt verlangsamt es die Bereitstellung der Applikation, da sie während des Prozesses installiert werden müssen. Für eine schnelle Entwicklung ist es somit wichtig, einen rapiden Bereitstellungsprozess zu entwickeln und die Zahl der externen Pakete auf das Nötigste zu begrenzen.
+Diese werden jedoch nur in Teilen der Anwendung verwendet, werden allerdings zum gesamten Frontend hinzugefügt. Insgesamt verlangsamt es die Bereitstellung der Applikation, da sie während des Prozesses installiert werden müssen. Für eine schnelle Entwicklung ist es somit wichtig die Zahl der externen Pakete auf das Nötigste zu begrenzen.
 
-Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, hat PluraPolit beschlossen, den aktuellen Aufbau in eine Microservicearchitektur zu ändern und die gesamte Plattform in inhaltlich getrennte Module zu teilen.
+Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, hat PluraPolit beschlossen, den aktuellen Aufbau in eine Microservice-Architektur zu ändern und die gesamte Plattform in inhaltlich getrennte Module zu teilen.
 
 \subsection{Zielsetzung}
 \label{sec:zielsetzung}
 
-Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vlg.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservicearchitektur bezeichnet \parencite[vlg.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservicearchitektur beschreiben.
+Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vgl.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservice-Architektur bezeichnet \parencite[vgl.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservice-Architektur beschreiben.
 
-Trotz der Informationslage ist jedoch noch relativ unbekannt, ob auch Start-ups Microservices umsetzen können und welche Bedingungen dafür erforderlich wären. Es gibt kaum Erfahrungen, die es PluraPolit ermöglichen abzuschätzen, ob sich eine Umstellung zum aktuellen Zeitpunkt lohnt und welche Eigenschaften ein Unternehmen erfüllen muss.
+Trotz der Informationslage ist es noch unbekannt, ob auch Start-ups Microservices umsetzen können und welche Bedingungen dafür erforderlich wären. Es gibt kaum Erfahrungen, die es PluraPolit ermöglichen abzuschätzen, ob sich eine Umstellung zum aktuellen Zeitpunkt lohnt und welche Eigenschaften ein Unternehmen erfüllen muss.
 
-Das Ziel dieser Arbeit ist es deshalb, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. Es sollen die notwendigen Anforderungen an ein Unternehmen ausgearbeitet werden, das sein System von einer monolithen Architektur zu einer Microservices-Architektur umstellen möchte.
+Das Ziel dieser Arbeit ist es deshalb, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. Es sollen die notwendigen Anforderungen an ein Unternehmen ausgearbeitet werden, das sein System von einer monolithischen Architektur zu einer Microservice-Architektur umstellen möchte.
 
 
 \subsection{Vorgehen}
@@ -51,8 +51,8 @@ Die Arbeit teilt sich in drei Bereiche auf:
 	\item die Auswertung.
 \end{itemize}
 
-Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestellt. Es werden einzelne wichtige Merkmale beleuchtet und beschrieben. Zwischen der aktuellen Software-Architektur des Unternehmens und Microservices wird ein Vergleich erstellt. Aus den Merkmalen und der Gegenüberstellung werden wichtige Bedingungen für die Umstellung zu einer Microservicearchitektur abgeleitet, welche Grundlage für die Einschätzung sind.
+Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestellt. Es werden einzelne wichtige Merkmale beleuchtet und beschrieben. Aus den Merkmalen werden wichtige Bedingungen für die Umstellung zu einer Microservice-Architektur abgeleitet, welche Grundlage für die Experteninterviews sind.
 
 Im nächsten Abschnitt werden diese Bedingungen im Rahmen einer qualitativen Befragung von Experten im Bereich Microservices eingeschätzt und bewertet. Hierfür werden Interviews durchgeführt. Es wird beschrieben, welche Experten ausgewählt werden und welche Expertise sie mitbringen. Die einzelnen Interviewfragen werden vorgestellt und deren Zusammenhang zur Zielsetzung erklärt. Dadurch wird deutlich, welchen Einfluss die Expertenaussagen auf die Einschätzung für PluraPolit haben.
 
-Abschließend werden die Aussagen aus den Befragungen mit der theoretischen Ausarbeitung verglichen und auf PluraPolit bezogen. Hierfür wird die Machbarkeit für das junge Unternehmen hinterfragt und die Auswertung diskutiert. Beendet wird die These mit einer Einschätzung für PluraPolit, in der eine klare Beurteilung für oder gegen eine Überführung abgegeben wird.
+Abschließend werden die Aussagen aus den Befragungen mit der theoretischen Ausarbeitung verglichen und auf PluraPolit bezogen. Beendet wird die Arbeit mit einer Einschätzung für PluraPolit, in der eine klare Beurteilung für oder gegen eine Umstellung abgegeben wird.
