--- a/sections/Fazit.tex
+++ b/sections/Fazit.tex
@@ -1,16 +1,11 @@
 \section{Fazit}
 
-%Ziel der Bachelorarbeit
 Diese Bachelorarbeit hat das Ziel, die Bedingungen zu ermitteln, die für eine mögliche Umstellung für PluraPolit erforderlich sind und eine klare Bewertung für den Nutzen des Vorhaben abzugeben. Zu diesem Zweck wurden erste Bedingungen aus einer Literaturrecherche abgeleitet und von Experten innerhalb eines quantitativen Leitfadeninterviews validiert.
 
-%Ergebnisse
-Die Ergebnisse zeigen, dass von den neun Bedingungen aus der Literaturrecherche sechs bestätigt wurden.
-%Todo Welche Bedingungen kamen hinzu?
-Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus. Allerdings hängt diese vom zu erwartenden Mehrwert und den notwendigen Kosten ab. Entscheidend für den Mehrwert ist die Komplexität des Unternehmens. Die Kosten einer Umsetzung wurden zum einen an den zu verwendeten Ressourcen für die Infrastruktur festgehalten und an den Wissenstand der Mitarbeiter.
+Die Ergebnisse zeigen, dass von den neun Bedingungen, aus der Literaturrecherche, sechs bestätigt wurden. Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche als Bedingung hinzu genommen wurde. Allerdings hängt diese vom zu erwartenden Mehrwert und den notwendigen Kosten ab. Entscheidend für den Mehrwert ist die Komplexität des Unternehmens. Die Kosten einer Umsetzung wurden zum einen an den zu verwendeten Ressourcen für die Infrastruktur festgehalten und an den Wissenstand der Mitarbeiter.
 
-%Bezug zu PluraPolit
 Die Problemstellung der Arbeit verwies darauf, dass aufgrund funktionaler Abhängigkeiten die Produktivität von PluraPolit abnimmt. Es wurde davon ausgegangen, dass Microservices dieses Problem am geeignetsten löst.
-Wie die Ergebnisse jedoch zeigen, kann ebenfalls ein Monolith genutzt werden. Vielmehr steigt durch den Einsatz einer Microservicearchitektur die Komplexität und Aufwand zur Erstellung und Verwaltung der Infrastruktur.
+Wie die Ergebnisse jedoch zeigen, kann ebenfalls ein Monolith genutzt werden. Vielmehr steigt durch den Einsatz einer Microservice-Architektur die Komplexität und Aufwand zur Erstellung und Verwaltung der Infrastruktur.
 
 Die Ergebnisse haben schließlich gezeigt, dass vor der Umstellung folgende Bedingungen erfüllt sein müssen:
 \begin{enumerate}
@@ -23,8 +18,4 @@ Die Ergebnisse haben schließlich gezeigt, dass vor der Umstellung folgende Bedi
 	\item Der Zugriff aufs Netzwerk ist vor Unbefugten gesichert
 \end{enumerate}
 
-%Todo Beziehen auf alle Bedingungen, vor allem die Geschäftsabläufe lassen sich voneinander trennen
-Da PluraPolit keine ausreichende Komplexität zum aktuellen Zeitpunkt aufweist, ist die Notwendigkeit für eine Umstellung nicht gegeben. Weiterführend können keine nachvollziehbaren Vorteile aus einer Umstellung gesehen werden, während Kosten durch weitere Schulungen oder externe Fachkräfte absehbar sind.
-
-Demnach ist eine Umstellung für PluraPolit zum aktuellen Zeitpunkt nicht zu empfehlen.
-
+Da PluraPolit zum aktuellen Zeitpunkt weder eine ausreichende Komplexität, noch trennbare Geschäftsabläufe aufweist, ist die Notwendigkeit für eine Umstellung nicht gegeben. Weiterführend können keine nachvollziehbaren Vorteile aus einer Umstellung erkannt werden, während Kosten durch weitere Schulungen oder externe Fachkräfte absehbar sind. Demnach ist eine Umstellung für PluraPolit zum aktuellen Zeitpunkt nicht zu empfehlen.
