--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,20 +1,20 @@
 \subsection{Durchführung des Interviews}
 
-Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam, dass Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
+Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam, dass Herr Troppmann in München wohnte und ein Gespräch nur online möglich war.
 
 Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in der Bachelorarbeit verwendet werden dürfen.
 
 Um während des Interviews Rückfragen zu stellen, wurden zusätzlich zur laufenden Aufzeichnung kurze Notizen erstellt.
 
-Die Interviews wurden nacheinander gehalten. Der erste Interviewpartner war Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppman am 21 Juni und Sebastian Schlaak am 24 Juni.
+Die Interviews wurden nacheinander gehalten. Der erste Interviewpartner war Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppmann am 21 Juni und Sebastian Schlaak am 24 Juni.
 
 In allen drei Fällen hat das Interview mit folgender Frage gestartet:
 
-\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
+\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservice-Architektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
 Mit dieser Frage sollte die Annahme beantwortet werden, dass es überhaupt Bedingungen gibt. Weiterführend sollte den Experten die Möglichkeit gegeben werden, ohne jegliche Einschränkung notwendige Bedingungen zu nennen.
 
-In zwei der drei Interviews (Christoph Rahles und Alexander Troppman) wurden nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten sich thematisch der besagten Fragestellung annäherten.
+In zwei der drei Interviews (Christoph Rahles und Alexander Troppmann) wurden nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten sich thematisch der besagten Fragestellung annäherten.
 
 Es folgte Frage zwei:
 
@@ -29,9 +29,7 @@ Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
 	\item Teams eigenverantwortlich arbeiten und
 	\item ausschließlich über die Schnittstellen auf Informationen zu greifen.
 \end{enumerate}
-Es wurde sich für eine möglichst offene Frage entschieden, um die Relevant dieser Hypothese zu ermitteln.
-
-%Todo Relevanz genauer beschreiben
+Es wurde sich für eine möglichst offene Frage entschieden, um den Experten die Möglichkeit zugeben, uneingeschränkt zu antworten.
 
 Anschließend wurde Frage drei gestellt:
 
@@ -45,8 +43,7 @@ Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (
 	\item ein hohen Datendurchsatz besitzt.
 \end{enumerate}
 
-Auch hier wählte man bewusst die offene Fragestellung, in der Hoffnung, dass die Experten ihre Erfahrung einbringen.
-%Die Frage wurde möglichst offen gestellt, sodass die Experten ihre Erfahrung einbringen konnten und weitere Anforderungen nennen.
+Auch hier wählte man bewusst eine offene Fragestellung.
 
 Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umgeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
