--- a/sections/Methodik/ergebnisse/frage1.tex
+++ b/sections/Methodik/ergebnisse/frage1.tex
@@ -1,12 +1,12 @@
 \subsubsection{Frage 1}
 \label{sec:frage1}
 
-\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
+\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservice-Architektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
-Alle drei Experten beantworteten diese Frage mit Ja und nannten weitere Bedingungen (siehe \combref{appendix:r-1}, \combref{appendix:troppman} und \combref{appendix:schlaak}).
+Alle drei Experten beantworteten diese Frage mit Ja und nannten weitere Bedingungen (siehe \combref{appendix:r-1}, \combref{appendix:Troppmann} und \combref{appendix:schlaak}).
 
-Sowohl Sebastian Schlaak, als auch Alexander Troppman gaben als Antwort an, dass sie erst Microservices in betracht ziehen, wenn inhaltlich unterschiedliche Anwendungen vorliegen. Herr Schlaak beschrieb in seinem Interview: \textit{\enquote{ich glaube, dass wäre eine Bedingung, wenn man sagt: […] ich habe etwas [eine neue Funktion], was […] ein ganz anderen Zweck erfüllt […].}} (siehe \combref{appendix:s-5}). Herr Troppman fasste es in seinem Interview wie folgt zusammen:  \textit{\enquote{Also wie gesagt, ich brauche eine technische Trennung […]}} und verwies auf die Trennung zwischen unterschiedlichen logischen Abläufen (siehe \combref{appendix:t-1}).
+Sowohl Sebastian Schlaak, als auch Alexander Troppmann gaben als Antwort an, dass sie erst Microservices in betracht ziehen, wenn inhaltlich unterschiedliche Anwendungen vorliegen. Herr Schlaak beschrieb in seinem Interview: \textit{\enquote{ich glaube, dass wäre eine Bedingung, wenn man sagt: […] ich habe etwas [eine neue Funktion], was […] ein ganz anderen Zweck erfüllt […].}} (siehe \combref{appendix:s-5}). Herr Troppmann fasste es in seinem Interview wie folgt zusammen:  \textit{\enquote{Also wie gesagt, ich brauche eine technische Trennung […]}} und verwies auf die Trennung zwischen unterschiedlichen logischen Abläufen (siehe \combref{appendix:t-1}).
 
-Als zweite Bedingung nannten die Experten die Wirtschaftlichkeit. Sie wurde  von Christoph Rahles und Alexander Troppman hervorgehoben. Herr Rahles führte in seinem Interview an, dass es jemanden geben muss, \textit{\enquote{der […] sich die Frage stellt: Ist es wirtschaftlich, Ja oder Nein?}} (siehe \combref{appendix:r-3}). Herr Troppman beurteilte es wie folgt: \textit{\enquote{[…] ich muss ein Business Case haben, [...][damit] sich das auch lohnt.}} (siehe \combref{appendix:t-2}). Daraus kann geschlussfolgert werden, dass der wirtschaftliche Nutzen ein wesentliche Voraussetzung für den Einsatz von Microservices ist.
+Als zweite Bedingung nannten die Experten die Wirtschaftlichkeit. Sie wurde  von Christoph Rahles und Alexander Troppmann hervorgehoben. Herr Rahles führte in seinem Interview an, dass es jemanden geben muss, \textit{\enquote{der […] sich die Frage stellt: Ist es wirtschaftlich, Ja oder Nein?}} (siehe \combref{appendix:r-3}). Herr Troppmann beurteilte es wie folgt: \textit{\enquote{[…] ich muss ein Business Case haben, [...][damit] sich das auch lohnt.}} (siehe \combref{appendix:t-2}). Daraus kann geschlussfolgert werden, dass der wirtschaftliche Nutzen ein wesentliche Voraussetzung für den Einsatz von Microservices ist.
 
 Allein Herr Rahles verwies darauf, dass die Entscheidung für Microservices vom “Reifegrad des Geschäftsmodells” abhängt (siehe \combref{appendix:r-1}).
