--- a/sections/Methodik/ergebnisse/frage3.tex
+++ b/sections/Methodik/ergebnisse/frage3.tex
@@ -13,7 +13,7 @@ Auch die Sicherheit wurde von Herrn Rahles angemerkt. Dabei sah er es aber als G
 
 Herr Schlaak und Herr Rahles hoben ein gut eingebautes Fehlermanagement hervor. So beschrieben beide, dass Services \textit{\enquote{vernünftige Fehlermeldungen}} zurück geben sollten (siehe \combref{appendix:s-18} und \combref{appendix:r-34}).
 
-Aus den technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement geht hervor, dass Kenntnisse in der Implementierung und in der Verwaltung der Infrastruktur vorhanden sein müssen. Eine Aussage, die auch von Herrn Troppman bestätigt wurde.\footnote{
+Aus den technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement geht hervor, dass Kenntnisse in der Implementierung und in der Verwaltung der Infrastruktur vorhanden sein müssen. Eine Aussage, die auch von Herrn Troppmann bestätigt wurde.\footnote{
 \textit{\enquote{[…] es [braucht] einen Entwickler, der sich mit dem Aufbau der Infrastruktur auskennt.}} (siehe \combref{appendix:t-33})
 }
 
