--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -1,13 +1,11 @@
 \subsection{Auswahl der Experten}
 
-Für das Interview wurden Christoph Rahles, Alexander Troppman und Sebastian Schlaak befragt.
-Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservicearchitektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppman und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppman Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
-
-%Todo Größe und Kontext der Vorträge anbringen, da es sonst keinen Wert bekommt. Hier sollte Meetup, technische Plattform und 100 angemeldete Zuschauer angesprochen werden.
+Für das Interview wurden Christoph Rahles, Alexander Troppmann und Sebastian Schlaak befragt.
+Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppmann und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppmann Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
 
 Des Weiteren wurden alle drei ausgewählt, da sie PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
 
-Herr Troppman und die Mitarbeiter von PluraPolit haben erst vor einigen Wochen gemeinsam an einem Hackathon teilgenommen und die Plattform konzeptionell weiter entwickelt. Es wurden Entwürfe erstellt, wie PluraPolit auch für den Schulunterricht eingesetzt werden kann. Folglich kennt Herr Troppman den aktuellen Stand der Bildungsplattform.
+Herr Troppmann und die Mitarbeiter von PluraPolit haben erst vor einigen Wochen gemeinsam an einem Hackathon teilgenommen und die Plattform konzeptionell weiter entwickelt. Es wurden Entwürfe erstellt, wie PluraPolit auch für den Schulunterricht eingesetzt werden kann. Folglich kennt Herr Troppmann den aktuellen Stand der Bildungsplattform.
 
 Sowohl ich als auch Robin Zuschke haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und standen gelegentlich mit Herr Schlaak im Austausch. Demnach kannte Herr Schlaak vor dem Interview den technischen Standpunkt und die internen Abläufe.
 
