--- a/sections/start.tex
+++ b/sections/start.tex
@@ -24,13 +24,14 @@ Studiengang Wirtschaftsinformatik (B. Sc.)
 \vspace{1.4cm}
 
 \textbf{Thema (Deutsch)} \\
-Die Umstellung einer monolithischen in eine Microservices Architektur \\
+Die Umstellung von einer monolithischen Architektur auf eine Microservice-Architektur \\
 am Beispiel von PluraPolit
 
 \vspace{.5cm}
 
 \textbf{Thema (Englisch)} \\
-The conversion of a monolithic to a microservices architecture using the example of PluraPolit.
+The conversion from a monolithic architecture to a microservice architecture \\
+using the example of the startup PluraPolit
 
 \vspace{1.5cm}
 
