--- a/references.bib
+++ b/references.bib
@@ -644,7 +644,7 @@ Section: Entrepreneurs},
 }
 
 @online{grpc_docs,
-	title = {{gRPC}},
+	title = {{gRPC Docs}},
 	url = {https://grpc.io/},
 	abstract = {A high-performance, open source universal {RPC} framework},
 	titleaddon = {{gRPC}},
@@ -665,4 +665,55 @@ Section: Entrepreneurs},
 	langid = {german},
 	note = {Page Version {ID}: 200079846},
 	file = {Snapshot:/Users/eddie/Zotero/storage/EA9MFLH7/index.html:text/html}
+}
+
+@inreference{grpc_wiki_2020,
+	title = {{gRPC}},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=GRPC&oldid=199461609},
+	abstract = {{gRPC} ({gRPC} Remote Procedure Calls) ist ein Protokoll zum Aufruf von Funktionen in verteilten Computersystemen. Es basiert auf dem Standard {HTTP}/2 und Protocol Buffers.},
+	booktitle = {Wikipedia},
+	urldate = {2020-07-04},
+	date = {2020-04-30},
+	langid = {german},
+	note = {Page Version {ID}: 199461609},
+	file = {Snapshot:/Users/eddie/Zotero/storage/9D8WWTNZ/index.html:text/html}
+}
+
+@inreference{hypertext_wiki_2020,
+	title = {Hypertext Transfer Protocol},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=Hypertext_Transfer_Protocol&oldid=198873705},
+	abstract = {Das Hypertext Transfer Protocol ({HTTP}, englisch für Hypertext-Übertragungsprotokoll) ist ein zustandsloses Protokoll zur Übertragung von Daten auf der Anwendungsschicht über ein Rechnernetz. Es wird hauptsächlich eingesetzt, um Webseiten (Hypertext-Dokumente) aus dem World Wide Web ({WWW}) in einen Webbrowser zu laden. Es ist jedoch nicht prinzipiell darauf beschränkt und auch als allgemeines Dateiübertragungsprotokoll sehr verbreitet.
+{HTTP} wurde von der Internet Engineering Task Force ({IETF}) und dem World Wide Web Consortium (W3C) standardisiert. Aktuelle Version ist {HTTP}/2, welche als {RFC} 7540 am 15. Mai 2015 veröffentlicht wurde. Die Weiterentwicklung wird von der {HTTP}-Arbeitsgruppe der {IETF} ({HTTPbis}) organisiert. Es gibt zu {HTTP} ergänzende und darauf aufbauende Standards wie {HTTPS} für die Verschlüsselung übertragener Inhalte oder das Übertragungsprotokoll {WebDAV}.},
+	booktitle = {Wikipedia},
+	urldate = {2020-07-04},
+	date = {2020-04-14},
+	langid = {german},
+	note = {Page Version {ID}: 198873705},
+	file = {Snapshot:/Users/eddie/Zotero/storage/WR9GMJYC/index.html:text/html}
+}
+@inreference{softwareverteilung_2020,
+	title = {Softwareverteilung},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=Softwareverteilung&oldid=201347640},
+	abstract = {Softwareverteilung (englisch software deployment) nennt man Prozesse zur Installation von Software auf Rechnern.
+Viele Anwender verfügen nicht über die Kenntnisse oder Berechtigungen, um Software selbst zu installieren. Daher ist es in Organisationen üblich, dass qualifizierte Mitarbeiter diese Aufgabe für die Anwender erledigen bzw. veranlassen. In größeren Organisationen wird Software unbeaufsichtigt installiert. Beispiel dafür sind die unbeaufsichtigte Installation unter Windows und die unbeaufsichtigte Installation unter Linux.
+Die Softwareverteilung ist ein kritischer Prozess, da mit ihr auch Betriebssystemkorrekturen sowie die Installation sicherheitsrelevanter Anwendungen wie Virenscanner, Browser und E-Mailprogramm erfolgen. Fehler bei der Softwareverteilung können Störungen und Ausfälle an einer großen Zahl von Arbeitsplatzrechnern nach sich ziehen.},
+	booktitle = {Wikipedia},
+	urldate = {2020-07-03},
+	date = {2020-06-27},
+	langid = {german},
+	note = {Page Version {ID}: 201347640},
+	file = {Snapshot:/Users/eddie/Zotero/storage/RSLDH8MK/index.html:text/html}
+}
+
+@online{conway_conways_1968,
+	title = {Conway's law},
+	rights = {F. D. Thompson Publications, Inc.},
+	url = {http://www.melconway.com/research/committees.html},
+	author = {Conway, Melvin E.},
+	urldate = {2020-07-05},
+	date = {1968-04},
+	file = {Home Page of Mel Conway's Site:/Users/eddie/Zotero/storage/TKUZI2ZJ/committees.html:text/html}
 }
