--- a/sections/Methodik/ergebnisse/frage2.tex
+++ b/sections/Methodik/ergebnisse/frage2.tex
@@ -8,11 +8,11 @@ Herr Rahles fügte den Vermerk hinzu, dass die Teams stets zu einem Unternehmen 
 }
 Auch beurteilte er, dass Teams \textit{\enquote{interdisziplinär aufgestellt sein [müssen], [damit] sie wirklich unabhängig voneinander arbeiten können}} (siehe \combref{appendix:r-16}) und wies in seinem Interview daraufhin, dass Teams \textit{\enquote{innerhalb [ihrer] Business Domäne [...] der Owner sein [müssen]}} (siehe \combref{appendix:r-20}).
 
-Herr Schlaak und Herr Troppman führten an, dass insbesondere Schnittstellen definiert und beschrieben sein müssen.\footnote{
+Herr Schlaak und Herr Troppmann führten an, dass insbesondere Schnittstellen definiert und beschrieben sein müssen.\footnote{
 \textit{\enquote{Ganz wichtig ist, dass die Schnittstellen der Services entsprechend gut beschrieben sind […]}} (siehe \combref{appendix:s-13}); \textit{\enquote{[…] die Teams müssen sich einig sein, über welche Schnittstelle die Services kommunizieren.}} (siehe \combref{appendix:t-19}); \textit{\enquote{Schnittstellen nach außen müssen geklärt sein.}} ( siehe \combref{appendix:t-22})
 }
 
-Weiterführend wurde von Herr Troppman eine Struktur hervorgehoben, die Abläufe genauer beschreibt.\footnote{
+Weiterführend wurde von Herr Troppmann eine Struktur hervorgehoben, die Abläufe genauer beschreibt.\footnote{
 \textit{\enquote{[…] zumindest benötigt man Strukturen, sodass man weiß, was wie abläuft.}} (siehe \combref{appendix:t-22})
 } Diesen Ansatz erwähnte auch Herr Rahles, als er die Notwendigkeit von Projektmanagement ansprach.\footnote{
 \textit{\enquote{[…] es ist einfach sinnvoll zu gucken, dass […] die Teams entsprechend des Projektmanagements richtig aufgestellt sind.}} (siehe \combref{appendix:r-22})
