--- a/sections/Methodik/ergebnisse/frage5.tex
+++ b/sections/Methodik/ergebnisse/frage5.tex
@@ -5,10 +5,10 @@
 
 Alle drei Experten empfolen einen Monolithen (siehe \combref{appendix:r-38}, \combref{appendix:t-36} und \combref{appendix:s-31}).
 
-Alexander Troppman und Sebastian Schlaak haben weiterführend geraten, das Backend und das Frontend voneinander zu trennen. Herr Schlaaks Vorschlag war es, im Frontend ein \textit{\enquote{modernes JavaScript Framework}} zu verwenden und das \textit{\enquote{Backoffice}} der Mitarbeiter von der Darstellung der Endkunden zu trennen (siehe \combref{appendix:s-36}). Beide würden den Ansatz wählen, um die Flexibilität zu haben das Frontend bzw. das Backend auszutauschen.
+Alexander Troppmann und Sebastian Schlaak haben weiterführend geraten, das Backend und das Frontend voneinander zu trennen. Herr Schlaaks Vorschlag war es, im Frontend ein \textit{\enquote{modernes JavaScript Framework}} zu verwenden und das \textit{\enquote{Backoffice}} der Mitarbeiter von der Darstellung der Endkunden zu trennen (siehe \combref{appendix:s-36}). Beide würden den Ansatz wählen, um die Flexibilität zu haben das Frontend bzw. das Backend auszutauschen.
 
-Sowohl Herr Rahles, als auch Herr Troppman gaben an, dass sie einen Monolithen empfehlen, da es keine separate Geschäftsdomäne gibt, die eine Aufteilung in Services rechtfertigt.\footnote{
-\textit{\enquote{Ich glaube, dass es keine separate Business Domain gibt, wo man sagt, die muss zwangsläufig ausgelagert werden.}} (siehe \combref{appendix:r-40}); \textit{\enquote{Ich sehe da vom fachlichen her nichts, was eine Microservicearchitektur rechtfertigt.}} (siehe \combref{appendix:t-37})
+Sowohl Herr Rahles, als auch Herr Troppmann gaben an, dass sie einen Monolithen empfehlen, da es keine separate Geschäftsdomäne gibt, die eine Aufteilung in Services rechtfertigt.\footnote{
+\textit{\enquote{Ich glaube, dass es keine separate Business Domain gibt, wo man sagt, die muss zwangsläufig ausgelagert werden.}} (siehe \combref{appendix:r-40}); \textit{\enquote{Ich sehe da vom fachlichen her nichts, was eine Microservice-Architektur rechtfertigt.}} (siehe \combref{appendix:t-37})
 }
 
 Des Weiteren stand Herr Rahles der Umstellung zu Microservices ablehnend gegenüber, da nicht genügend Entwickler vorhanden sind (siehe \combref{appendix:r-39}).
